syntax = "proto3";

package cebes;
option java_multiple_files = true;
option java_package = "io.cebes.pipeline.protos";
option java_outer_classname = "StageProtos";

import "param.proto";
import "message.proto";

message StageDef {
    // The name given to this stage. Unique within a single PipelineDef.
    // Must satisfy the regex [a-z][a-z0-9_./]*
    string name = 1;

    // Class name of the stage
    string stage = 2;

    // map of inputs to this stage. Each entry is input_slot -> src_stage[:output_slot]
    // where input_slot is the input slot index of this stage,
    // src_stage is the name from which the output is retrieved,
    // from the output_slot. If output_slot isn't specified, it is default to be 0.
    map<int32, string> input = 3;

    repeated PipelineMessageDef output = 4;

    repeated ParamDef param = 5;
}
